--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<title>Test</title>
-<h1>First Website</h1>
-<h6>description</h6>
+<title>First Website</title>
+<h1>Test</h1>
+<h6>This is me testing</h6>
