--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
+<html>
+  <head>
 <title>First Website</title>
+  </head>
+  <body>
 <h1>Heading</h1>
 <p>Paragraph</p>
-<tagname>comment goes here</tagname>
+  </body>
+</html>
