--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <body>
 <h1>Heading</h1>
 <p>Paragraph</p>
-<a href="https://www.youtube.com" target="_blank">YouTube</a>   
+<a href="https://www.youtube.com" target="_blank">Visit YouTube!</a>
   </body>
 </html>
