--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <title>Testing</title>
   </head>
   <body>
-<h1>Heading</h1>
-<p>Paragraph</p>
+<h1 style="background-color:DodgerBlue;">Hello World</h1>
 <a href="https://www.youtube.com" target="_blank">Visit YouTube!</a>
   </body>
 </html>
